--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="about-content">
           <div class="about-text">
             <p>
-              I am an Application Security Analyst with one year of experience
+              I am an Security Analyst with one year of experience
               in securing enterprise applications, APIs, and endpoint
               infrastructures. At Tech Mahindra, I focus on application risk
               assessments, penetration testing, and secure code reviews. My work
